@@ -1,3 +1,8 @@
+2005-11-28  Richard Hult  <richard@imendio.com>
+
+	* src/dh-main.c: (message_received_cb), (main): Make both new and
+	old windows raise when searching through the bacon connection.
+
 2005-11-19  Richard Hult  <richard@imendio.com>
 
 	* src/dh-parser.c: (parser_start_node_cb), (dh_parser_read_file):
